dns/pihole/pihole-0-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-external-svc
  namespace: traefik
  annotations:
    # Use the actual name of the resource: pihole-transport
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-pihole-transport@kubernetescrd
spec:
  ports:
    - name: pi-port # Standardized name
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole-external-svc-1
  namespace: traefik
  labels:
    kubernetes.io/service-name: pihole-external-svc
addressType: IPv4
ports:
  - name: pi-port # MUST match Service port name exactly
    protocol: TCP
    port: 80 # Port Pi-hole is listening on
endpoints:
  - addresses:
      - "192.168.1.60"
    conditions:
      ready: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.local.spaelling.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-external-svc
                port:
                  name: pi-port
  tls:
    - hosts:
        - pihole.local.spaelling.xyz
      secretName: pihole-tls
